--- a/CTWUXClassExercise/Properties/codeTheWay.html
+++ b/CTWUXClassExercise/Properties/codeTheWay.html
@@ -15,69 +15,60 @@
     <br />
     <br />
     <div class="row">
-        <div class="col-sm-1">
-        </div>
         <img src="/Images/CodeTheWay Logo.png" height="5%" width="10%"/>
-        <div class="col-sm-8" align="center">
+        <div class="col-sm-10" align="center">
             <h1 align="center" class="heading1">Code the Way</h1>
         </div>
     </div>
     <br />
 
     <div class="row">
-        <div class="col-sm-1">
-        </div>
-        <div class="col-sm-3">
+        <div class="col-sm-3" align="center">
             <a href="codeTheWay.html" class="button">Code The Way</a>
         </div>
-        <div class="col-sm-3">
+        <div class="col-sm-3" align="center">
             <a href="lifeNavigators.html" class="button">Life Navigators</a>
         </div>
-        <div class="col-sm-3">
+        <div class="col-sm-3" align="center">
             <a href="heroesForHealthcare.html" class="button">Heroes For Healthcare</a>
         </div>
-        <div class="col-sm-2">
+        <div class="col-sm-3" align="center">
             <a href="media.html" class="button">Media</a>
         </div>
     </div>
     <br />
 
-
-    <div class="row">
-        <div class="col-sm-1">
-        </div>
-        <div class="col-sm-2">
-            <h3 class="heading2">Mission</h3>
-        </div>
-        <div class="col-sm-4">
-            <p class="body">Code the Way facilitates the collaboration of schools, companies, and nonprofits to: (1) Offer students advanced computer science training and real-world job experiences working on projects that benefit nonprofits; (2) Increase certified computer science teachers; and (3) Contribute to the technology talent base.</p>
-            <p class="body">Code the Way model includes:</p>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-2">
+                <h3 class="heading2">Mission</h3>
+            </div>
+            <div class="col-sm-4">
+                <p class="body">Code the Way facilitates the collaboration of schools, companies, and nonprofits to: (1) Offer students advanced computer science training and real-world job experiences working on projects that benefit nonprofits; (2) Increase certified computer science teachers; and (3) Contribute to the technology talent base.</p>
+                <p class="body">Code the Way model includes:</p>
                 <ul>
                     <li><a class="body" href="#" data-toggle="tooltip" data-placement="bottom" title="In addition to an advanced course that may earn post-secondary credits, students get experience working collaboratively on a project that benefits a nonprofit, culminating in a presentation to business leaders.">Student access to real-world job experience</a></li>
                     <li><a class="body" href="#" data-toggle="tooltip" data-placement="bottom" title="Companies invest in education, make technology more accessible to nonprofits, offer their employees a meaningful volunteer experience, and contribute to the talent pipeline.">Companies are part of the solution</a></li>
                     <li><a class="body" href="#" data-toggle="tooltip" data-placement="bottom" title="Support and training for computer science teacher certification increases the availability and quality of high school computer science programs.">Increasing certified computer science teachers</a></li>
                 </ul>
+            </div>
+            <img src="/Images/Team Learning.jpg" height="20%" width="35%" align="right" />
         </div>
-        <img src="/Images/Team Learning.jpg" height="20%" width="35%" align="right" />
-    </div>
-    
-    <div class="row">
-        <div class="col-sm-1">
-        </div>
-        <div class="col-sm-2">
-            <button onclick="showHide()" class="button">Show Vision</button>
-        </div>
-    </div>
-    <br />
-    <div id="vision">
+
         <div class="row">
-            <div class="col-sm-1">
-            </div>
             <div class="col-sm-2">
-                <h3 class="heading2">Vision</h3>
+                <button onclick="showHide()" class="button">Show Vision</button>
             </div>
-            <div class="col-sm-5">
-                <p class="body">High school students in Greater Milwaukee have access to high quality computer science education and real-world job experiences, positioning them for success in technology-related fields.</p>
+        </div>
+        <br />
+        <div id="vision">
+            <div class="row">
+                <div class="col-sm-2">
+                    <h3 class="heading2">Vision</h3>
+                </div>
+                <div class="col-sm-5">
+                    <p class="body">High school students in Greater Milwaukee have access to high quality computer science education and real-world job experiences, positioning them for success in technology-related fields.</p>
+                </div>
             </div>
         </div>
     </div>
