--- a/CTWUXClassExercise/Properties/codeTheWay.html
+++ b/CTWUXClassExercise/Properties/codeTheWay.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=divice-width, initial-scale=1" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="codeTheWaycss.css">
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="codeTheWaycss.css">
 
 
     <title>Code the Way</title>
@@ -16,7 +17,9 @@
     <br />
     <br />
     <div class="row">
-        <img src="/Images/CodeTheWay Logo.png" height="5%" width="10%"/>
+        <div class="col-sm-2" align="center">
+            <img src="/Images/CodeTheWay Logo.png"  />
+        </div>
         <div class="col-sm-10" align="center">
             <h1 align="center" class="majorHeading">Code the Way</h1>
         </div>
@@ -79,8 +82,8 @@
                 <img src="/Images/Team Learning.jpg" height="100%" width="100%" align="right" />
             </div>
         </div>
-        </div>
-    
+    </div>
+
 </body>
 
 </html>
