--- a/CTWUXClassExercise/Properties/heroesForHealthcare.html
+++ b/CTWUXClassExercise/Properties/heroesForHealthcare.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=divice-width, initial-scale=1" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="codeTheWaycss.css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="codeTheWaycss.css">
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 
@@ -14,11 +15,12 @@
     <br />
     <br />
     <div class="row">
-        <img src="/Images/Heroes Logo.png" height="5%" width="10%" />
-        <div class="col-sm-9" align="center">
-            <h1 align="center" class="majorHeading">Heroes For Healthcare</h1>
+        <div class="col-sm-2" align="center">
+            <img src="/Images/Heroes3.png" width="50%" />
         </div>
-            <img src="/Images/Heroes3.png" height="5%" width="10%" />
+        <div class="col-sm-10" align="center">
+            <h1 align="center" class="majorHeading">Heroes For Healthcare</h1>
+        </div>  
     </div>
 
     <br />
@@ -78,6 +80,10 @@
             </div>
         </div>
         <div class="row">
+                    <button onclick="showHide()" class="buttonFormatting">Show Message</button>
+                </div>
+                <div id="message">
+        <div class="row">
             <div class="col-sm-3">
                 <h3 class="minorHeading">Message From the President</h3>
             </div>
@@ -85,11 +91,10 @@
                 <div class="bodyText">
                     <p>
                         I started Heroes for Healthcare to help our U.S. military personnel receive the resources and credentials they need to continue their career in healthcare as a civilian.
-
                         We need supporters like you to help our mission so our service members can get a job and better their lives.
-
                         After all they did for us, supporting this organization seems like the right thing to do. Make a difference today by supporting Heroes for Healthcare.
                     </p>
+                </div>
                 </div>
             </div>
         </div>
