--- a/CTWUXClassExercise/Properties/heroesForHealthcare.html
+++ b/CTWUXClassExercise/Properties/heroesForHealthcare.html
@@ -11,7 +11,7 @@
 
     <title>Heroes For Healthcare</title>
 </head>
-<body>
+<body onload="hide()">
     <br />
     <br />
     <div class="row">
@@ -20,7 +20,7 @@
         </div>
         <div class="col-sm-10" align="center">
             <h1 align="center" class="majorHeading">Heroes For Healthcare</h1>
-        </div>  
+        </div>
     </div>
 
     <br />
@@ -80,30 +80,30 @@
             </div>
         </div>
         <div class="row">
-                    <button onclick="showHide()" class="buttonFormatting">Show Message</button>
+            <button onclick="showHide()" class="buttonFormatting">Show Message</button>
+        </div>
+        <div id="message">
+            <div class="row">
+                <div class="col-sm-3">
+                    <h3 class="minorHeading">Message From the President</h3>
                 </div>
-                <div id="message">
-        <div class="row">
-            <div class="col-sm-3">
-                <h3 class="minorHeading">Message From the President</h3>
-            </div>
-            <div class="col-sm-9">
-                <div class="bodyText">
-                    <p>
-                        I started Heroes for Healthcare to help our U.S. military personnel receive the resources and credentials they need to continue their career in healthcare as a civilian.
-                        We need supporters like you to help our mission so our service members can get a job and better their lives.
-                        After all they did for us, supporting this organization seems like the right thing to do. Make a difference today by supporting Heroes for Healthcare.
-                    </p>
-                </div>
+                <div class="col-sm-9">
+                    <div class="bodyText">
+                        <p>
+                            I started Heroes for Healthcare to help our U.S. military personnel receive the resources and credentials they need to continue their career in healthcare as a civilian.
+                            We need supporters like you to help our mission so our service members can get a job and better their lives.
+                            After all they did for us, supporting this organization seems like the right thing to do. Make a difference today by supporting Heroes for Healthcare.
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-    
+
+
     <br />
 </body>
 </html>
-
 <script>
     function showHide() {
         var x = document.getElementById("message");
@@ -125,4 +125,5 @@
     });
 
 </script>
+
 
