--- a/CTWUXClassExercise/Properties/codeTheWay.html
+++ b/CTWUXClassExercise/Properties/codeTheWay.html
@@ -13,7 +13,7 @@
     <title>Code the Way</title>
 </head>
 
-<body onload="hide()">
+<body onload="showHide()">
     <br />
     <br />
     <div class="row">
@@ -21,7 +21,7 @@
             <img src="/Images/CodeTheWay Logo.png"  />
         </div>
         <div class="col-sm-10" align="center">
-            <p align="center" class="majorHeading">Code the Way</p>
+            <p class="majorHeading" align="center" >Code the Way</p>
         </div>
     </div>
     <br />
@@ -96,11 +96,6 @@
         else {
             x.style.display = "block";
         }
-    }
-
-    function hide() {
-        var y = document.getElementById("vision");
-        y.style.display = "none";
     }
 
     $(document).ready(function () {
