--- a/CTWUXClassExercise/Properties/heroesForHealthcare.html
+++ b/CTWUXClassExercise/Properties/heroesForHealthcare.html
@@ -11,7 +11,7 @@
 
     <title>Heroes For Healthcare</title>
 </head>
-<body onload="hide()">
+<body onload="showHide()">
     <br />
     <br />
     <div class="row">
@@ -19,7 +19,7 @@
             <img src="/Images/Heroes3.png" width="50%" />
         </div>
         <div class="col-sm-10" align="center">
-            <p align="center" class="majorHeading">Heroes For Healthcare</p>
+            <p class="majorHeading" align="center">Heroes For Healthcare</p>
         </div>
     </div>
 
@@ -113,11 +113,6 @@
         else {
             x.style.display = "block";
         }
-    }
-
-    function hide() {
-        var y = document.getElementById("message");
-        y.style.display = "none";
     }
 
     $(document).ready(function () {
