--- a/CTWUXClassExercise/Properties/lifeNavigators.html
+++ b/CTWUXClassExercise/Properties/lifeNavigators.html
@@ -11,7 +11,7 @@
 
     <title>Life Navigators</title>
 </head>
-<body onload="hide()">
+<body onload="showHide()">
 
     <br />
     <br />
@@ -20,7 +20,7 @@
             <img src="/Images/LifeNavigators1.jpg" width="50%" />
         </div>
         <div class="col-sm-10" align="center">
-            <p align="center" class="majorHeading">Life Navigators</p>
+            <p class="majorHeading" align="center">Life Navigators</p>
         </div>
     </div>
     <br />
@@ -109,10 +109,7 @@
 </html>
 
 <script>
-    $(document).ready(function () {
-        $('[data-toggle="tooltip"]').tooltip();
-    });
-
+    
     function showHide() {
         var x = document.getElementById("history");
         if (x.style.display !== "none") {
@@ -121,13 +118,9 @@
         else {
             x.style.display = "block";
         }
-    }
-
-    function hide() {
-        var y = document.getElementById("history");
-        y.style.display = "none";
-    }
-
-
+        }
+    $(document).ready(function () {
+        $('[data-toggle="tooltip"]').tooltip();
+    });
 
 </script>
